# openpmkit

./: .cursorrules  .doignore  .eslintrc.js  .gitignore  .mcp.json  .npmignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MOCK-DATA-FINTECH.md  MOCK-DATA-HEALTHTECH.md  MOCK-DATA.md  PMKIT-DESKTOP-PLAN.md  Procfile  README.md  TODO.md  install.sh  package-lock.json  package.json  project.toml  pyproject.toml  requirements-dev.txt  slack-app-manifest.json  tsconfig.json  tsconfig.tsbuildinfo  tsup.config.ts  turbo.json
.claude-plugin/: marketplace.json
.do/: app.yaml  deploy.template.yaml
apps/pmkit-macos/: Package.resolved  Package.swift
apps/web/: Dockerfile  docker-entrypoint.sh  env.example  next.config.js  package.json  tailwind.config.ts  tsconfig.json  (+1 more)
docker/: Dockerfile.web  Dockerfile.worker  docker-compose.yml
plugin/: .mcp.json  CONNECTORS.md  LICENSE  README.md
pmkit-desktop/: README.md  package.json
pmkit-mac/: .gitignore  LLM-INTEGRATION.md  Package.swift  README.md  TODO.md  agents.md  claude.md
pmkit_mcp/: __init__.py  __main__.py  renderer.py  server.py
prisma/: schema.prisma
product-management/: README.md
prompts/: 01-daily-brief.md  02-meeting-prep.md  03-voc-clustering.md  04-competitor-research.md  05-roadmap-alignment.md  06-prd-draft.md  07-sprint-review.md  08-prototype-generation.md  09-release-notes.md  10-deck-content.md  11-feature-ideation.md  12-one-pager.md  13-tldr.md  ALL-PROMPTS.md
scripts/: build_plugin.py  package_plugin.sh
src/: index.ts
tests/: test_registry.py  test_renderer.py  test_server.py
(+1575 files in other folders)
